Tweaks to ijj.li playbook

--- a/playbooks/roles/ssh_hardening/templates/sshd_config.j2
+++ b/playbooks/roles/ssh_hardening/templates/sshd_config.j2
@@ -62,3 +62,9 @@ AllowTcpForwarding no
 
 # Disable agent forwarding, since local agent could be accessed through forwarded connection.
 AllowAgentForwarding no
+
+# Miscellaneous configuration
+# ---------------------------
+
+# Enable SFTP
+Subsystem sftp internal-sftp -l INFO -f LOCAL6 -u 0027
